--- a/vib_control.html
+++ b/vib_control.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>震動訓練機 MQTT 控制台頁面</title>
+  <title>震動訓練機 MQTT 控制台頁面2</title>
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", sans-serif; margin: 16px; }
     .row { display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
